# hello-qemu

./: CMakeLists.txt
.github/containers/: calculator-cross.Dockerfile
.github/workflows/: build-ci-container.yml  ci.yml
cmake/toolchains/: arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake  armv7-linux-androideabi.cmake  armv7-linux-musleabi.cmake  armv7-linux-musleabihf.cmake  armv8-linux-android.cmake  armv8-linux-musl.cmake  i686-linux-android.cmake  i686-linux-gnu.cmake  i686-linux-musl.cmake  riscv32-linux-gnu.cmake  riscv32-linux-musl.cmake  riscv64-linux-android.cmake  riscv64-linux-gnu.cmake  riscv64-linux-musl.cmake  x64-linux-android.cmake  x64-linux-gnu.cmake  x64-linux-musl.cmake  x86_64-linux-gnu.cmake
scripts/: build-and-test.sh
src/: CMakeLists.txt  Calculator.cpp  Calculator.h
tests/: CMakeLists.txt  TestCalculator.cpp
